--- a/ui/main.css
+++ b/ui/main.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('./_lib/open_sans.css');
+@import url('./_lib/roboto_mono.css');
+@import url('./_lib/maplibre.css');
+@import url('./_lib/monaco.css');
 
 @import url('./app/app.css');
 @import url('./login/login.css');
@@ -10,14 +13,17 @@
 @import url('./datum/datum.css');
 
 :root {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 300;
+  line-height: 2;
+  font-family: 'Open Sans', 'Helvetica', sans-serif;
   font-size: 16px;
+  font-weight: 300;
+  font-stretch: semi-condensed;
+  font-variant-numeric: slashed-zero;
+  /* enable serif on capital 'i' for open sans */
+  font-feature-settings: 'ss03';
 }
 
 html, body {
-  width: 100%;
-  height: 100%;
   padding: 0;
   margin: 0;
   overscroll-behavior: none;
