--- a/ui/login/login.css
+++ b/ui/login/login.css
@@ -1,5 +1,5 @@
 .login {
-  background-color:  #212122;
+  background-color:  hsl(0 0% 14%);
 }
 
 .login-form {
@@ -11,17 +11,9 @@
 
 .login-user,
 .login-password {
-  appearance: none;
-  background: none;
-  border: none;
+  all: unset;
   border-bottom: 1px solid #8885;
-  font-family: inherit;
-  font-size: inherit;
-  font-weight: inherit;
-  font-stretch: inherit;
-  font-style: inherit;
   line-height: 2.5;
-  color: inherit;
   padding: 0 .5em;
 }
 
@@ -34,24 +26,19 @@
   outline: none;
 }
 
-
 .login-submit {
-  appearance: none;
-  background: #444;
-  border: none;
-  border-radius: 1em;
-  font-family: inherit;
-  font-size: inherit;
-  font-weight: inherit;
-  font-stretch: inherit;
-  font-style: inherit;
-  line-height: 2;
+  all: unset;
+  font-size: .75rem;
+  line-height: 2rem;
+  font-weight: 500;
+  font-stretch: normal;
+  background-color: #444;
+  border-radius: 1rem;
   text-transform: uppercase;
-  color: inherit;
-  padding: 0;
-  margin: 1em 2em;
+  margin: 1rem 2rem;
   cursor: pointer;
   transition: opacity 200ms ease;
+  text-align: center;
 }
 .login-submit[data-pending] {
   background-image: linear-gradient(to right, #fff0 0%, #fff2 50%, #fff0 100%);
