--- a/ui/main.css
+++ b/ui/main.css
@@ -12,6 +12,7 @@
 @import url('./drafts/drafts.css');
 @import url('./tree/tree.css');
 @import url('./datum/datum.css');
+@import url('./log/log.css');
 
 :root {
   line-height: 2;
