--- a/ui/main.css
+++ b/ui/main.css
@@ -5,10 +5,11 @@
 @import url('./_lib/monaco.css');
 
 @import url('./app/app.css');
-@import url('./login/login.css');
+@import url('./auth/auth.css');
 @import url('./map/map.css');
 @import url('./code/code.css');
 @import url('./out/out.css');
+/* @import url('./table/table.css'); */
 @import url('./drafts/drafts.css');
 @import url('./tree/tree.css');
 @import url('./datum/datum.css');
