--- a/ui/datum/datum.css
+++ b/ui/datum/datum.css
@@ -22,5 +22,9 @@
   pointer-events: none;
   font-style: italic !important;
   font-weight: 300 !important;
-  opacity: .5;
+  opacity: 0;
+
+  .datum[data-null] & {
+    opacity: .5;
+  }
 }
